style.css
* {
margin: 0;
padding: 0;
box-sizing: border-box;
font-family: 'Syne', sans-serif;
}

nav {
    display: flex;
    justify-content: space-around;
    align-items: center;
    min-height: 8vh;
    background-color:rgb(48, 48, 226) ;
    font-family: 'Syne', sans-serif;
}

.logoName{
    color: white;
    text-transform: uppercase;
    letter-spacing: 5px;
    font-size: 20px;
}
.logo {
    /* Center the logo horizontally and align it vertically with flexbox */
    display: flex;
    align-items: center;
  }
  .logo img {
    /* Adjust the logo size as needed */
    width: 80px; /* You can change this value */
    height: 80px; /* Maintain aspect ratio */
    margin-right: 10px; /* Add some spacing between the logo and navigation links */
  }
  .logo a{
    color: white;
    text-decoration: none;
    letter-spacing: 3px;
    font-weight: bold;
    font-size: 14px;
    transition: color 0.3s ease;
}
.nav-links{
   display: flex;
   justify-content: space-around;
   width: 40%;
}
.nav-links li{
    list-style: none;
}
.nav-links a{
    color: white;
    text-decoration: none;
    letter-spacing: 3px;
    font-weight: bold;
    font-size: 14px;
    transition: color 0.3s ease;
}
.nav-links a:hover {
    color: black;
  }
  
.burger{
    display: none;
    cursor: pointer;
}
.burger div{
    width: 25px;
    height: 3px;
    background-color: white;
    margin: 5px;
    transition: all 0,3s ease;
}

@media screen and (max-width: 1024px){
    .nav-links{
        width: 60%;
    }
}

@media screen and (max-width:1024px){
    body{
        overflow-x: hidden;
    }
    .nav-links{
        position: absolute;
        right: 0px;
        height: 92vh;
        top: 8vh;
        background-color:rgb(48, 48, 226) ;
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 50%;
        transform: translateX(100%);
        transition: transform 0.5s ease-in;
    }
    .nav-links li{
        opacity: 0;
    }
    .burger{
        display: block;
    }
}

.nav-active{
    transform: translateX(0%);
}

@keyframes navLinkFade{
    from{
        opacity: 0;
        transform: translateX(50px);
    }
    to{
        opacity: 1;
        transform: translateX(0px);
}
}

.toggle .line1{
    transform: rotate(-45deg) translate(-5px,6px);
}
.toggle .line2{
    opacity: 0;
}
.toggle .line3{
    transform: rotate(45deg)  translate(-5px,6px);
}

.container{
    width: 100%;
    height: 100vh;
}
.slides{
    width: 100%;
    height: 100%;
}
.slides::before{
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    background: rgba(0,0,0,0.6);
    z-index: 9;
}
.slides img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}
.img_overlay{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50% ,-50%);
    width: 100%;
    text-align: center;
    z-index: 11;
    color: white;
    font-weight: 600;
}
.img_overlay p{
    font-size: 2.5rem;
    color:white;
}
.img_overlay h2{
    font-size: 4.5rem;
    letter-spacing: 5px;
    color:white;
}
.img_overlay a{
    text-decoration: none;
    color: white;
    padding: 0.8rem 2rem;
    margin-top: 2rem;
    border-radius: 4px;
    background: blue;
    transition: all 0.3s ease-in-out;
    display: inline-block;
}
.img_overlay a:hover{
    background: green;
}

.btn{
    background: rgba(0,0,0,0.6);
    padding: 2rem;
    color: white;
    border-radius: 50%;
}
.btn::after{
    color: white;
}

.swiper-button-next{
    margin-right: 50px;
}
.swiper-button-prev{
    margin-left: 50px;
}

@media(max-width: 900px){
    .swiper-button-next{
        margin-right: 20px;
    }
    .swiper-button-prev{
        margin-left: 20px;
    }
    .img_overlay p{
        font-size: 2rem;
    }
    .img_overlay h2{
        font-size: 3.5rem;
        letter-spacing: 5px;
        color:white;
    }
    .img_overlay a{
        text-decoration: none;
        color: white;
        padding: 0.6rem 1rem;
        margin-top: 2rem;
        border-radius: 4px;
        background: blue;
        transition: all 0.3s ease-in-out;
        display: inline-block;
    }
}

@media(max-width:768px){
    .swiper-button-next{
        margin-right: 10px;
    }
    .swiper-button-prev{
        margin-left: 10px;
    }
    .img_overlay p{
        font-size: 1.5rem;
    }
    .img_overlay h2{
        font-size: 2.5rem;
        letter-spacing: 5px;
        color:white;
    }

}

@media(max-width:600px){
    .btn{
        visibility: hidden;
    }
}

